#12 added styles, refactored markup structure

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "riek": "^1.0.7"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-datepicker": "^0.46.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
