--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "riek": "^1.0.7"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
