--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TA",
+  "name": "reduxdo",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -9,12 +9,15 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
+    "moment": "^2.18.1",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
-    "react-bootstrap": "^0.31.0",
     "react-datepicker": "^0.46.0",
     "react-dom": "^15.5.4",
+    "react-flatpickr": "^3.4.0",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0"
   },
