--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "reduxdo",
+  "name": "tasg",
+  "homepage": "https://r0bs.github.io",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "1.0.0",
     "redux-logger": "^3.0.6",
     "riek": "^1.0.7"
@@ -25,6 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
