added link script

--- a/theme/package.json
+++ b/theme/package.json
@@ -10,8 +10,8 @@
    "watch": {
     "build": "index.less"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "r0bs",
+  "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "less": "^2.7.2"
