--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "tasg",
-  "homepage": "https://r0bs.github.io",
+  "homepage": "https://tasg.one",
   "version": "0.1.0",
-  "private": true,
   "devDependencies": {
     "gh-pages": "^1.0.0",
     "react-scripts": "1.0.0",
@@ -13,7 +12,7 @@
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
     "element.scrollintoviewifneeded-polyfill": "^1.0.1",
-    "moment": "^2.18.1",
+    "moment": "^2.20.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -26,6 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "link": "npm ln ./theme && npm link theme/",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
