--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && git subtree push --prefix build https://github.com/r0bs/r0bs.github.io.git master --squash"
   }
 }
