--- a/package.json
+++ b/package.json
@@ -2,24 +2,23 @@
   "name": "tasg",
   "homepage": "https://tasg.one",
   "version": "0.1.0",
+  "license": "MIT",
+  "author": "r0bs",
   "devDependencies": {
-    "gh-pages": "^1.0.0",
-    "react-scripts": "1.0.0",
     "redux-logger": "^3.0.6",
-    "riek": "^1.0.7"
+    "riek": "^1.1.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "bootstrap": "^3.3.7",
+    "babel-polyfill": "^6.26.0",
     "element.scrollintoviewifneeded-polyfill": "^1.0.1",
-    "moment": "^2.20.1",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-flatpickr": "^3.4.0",
-    "react-redux": "^5.0.4",
-    "react-scripts": "1.0.17",
-    "redux": "^3.6.0",
+    "moment": "2.20.1",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-flatpickr": "^3.6.3",
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0"
   },
