--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy:warn": "echo '\n\n\nDEPLOYMENT ONLY WORKS WHEN CHANGES ARE ALREADY PUSHED TO MAIN REPOSITORY\n\n\n'",
-    "deploy": "npm run deploy:warn && npm run build && git subtree push --prefix build https://github.com/r0bs/r0bs.github.io.git master --squash"
+    "buildpush": "npm run build && git add build && git commit -m 'build push' && git push",
+    "deploy": "npm run buildpush && git subtree push --prefix build https://github.com/r0bs/r0bs.github.io.git master --squash"
   }
 }
